--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "uuid": "^9.0.0"
   }
 }
