--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@types/cors": "^2.8.12",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5",
-    "uuid": "^9.0.0"
+    "mongoose": "^6.6.5"
   }
 }
